--- a/02_css/14-1_레이아웃연습.html
+++ b/02_css/14-1_레이아웃연습.html
@@ -49,5 +49,42 @@
       </div>
       <div class="footer"></div>
     </div>
+
+    <hr />
+    <hr />
+    <hr />
+
+    <!-- 컨테이너 -->
+    <div class="container-3">
+      <!-- 왼쪽 -->
+      <div></div>
+
+      <!-- 오른쪽 -->
+      <div class="rightBox">
+        <!-- 헤더 -->
+        <div></div>
+        <!-- 네비 -->
+        <div></div>
+        <!-- 콘텐츠(주황) -->
+        <div class="orangeBox">
+          <!-- 빨간색 -->
+          <div class="redBox">
+            <!-- 노란색 박스들 -->
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
+          <!-- 파/초 박스 -->
+          <div class="blueGreenBox">
+            <!-- 파란색 -->
+            <div></div>
+            <!-- 초록색 -->
+            <div></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
