--- a/03_javascript/html/00_회원가입양식.html
+++ b/03_javascript/html/00_회원가입양식.html
@@ -11,7 +11,7 @@
       }
 
       .wrong {
-        color: red;
+        color: tomato;
       }
     </style>
 
@@ -22,10 +22,10 @@
       <label for="userId">아이디</label> <input type="text" id="userId" />
       <span id="idCheck"></span>
       <br />
-      <label for="pw1">비밀번호</label> <input type="text" id="pw1" />
+      <label for="pw1">비밀번호</label> <input type="password" id="pw1" />
       <span id="pwCheck1"></span>
       <br />
-      <label for="pw2">비밀번호 확인</label> <input type="text" id="pw2" />
+      <label for="pw2">비밀번호 확인</label> <input type="password" id="pw2" />
       <span id="pwCheck2"></span>
       <br />
       <label for="name">이름</label> <input type="text" id="name" />
@@ -35,15 +35,15 @@
       <span id="phoneCheck"></span>
       <br />
       <label for="rrn1">주민등록번호</label>
-      <input type="text" id="rrn1" /> - <input type="text" id="rrn2" />
+      <input type="text" id="rrn1" /> - <input type="passwod" id="rrn2" />
       <span id="rrnCheck"></span>
       <br />
       <label for="email">이메일</label> <input type="email" id="email" />
       <span id="emailCheck"></span> <br />
 
-      <button>submit</button>
+      <button id="submitBtn">submit</button>
     </form>
 
-    <script src="/03_javascript/js/00_회원가입양식.js"></script>
+    <script src="/WebFront/03_javascript/js/00_회원가입양식.js"></script>
   </body>
 </html>
