초기화 시 input.value 삭제 추가

--- a/03_javascript/html/00_트랜지션색깔박스.html
+++ b/03_javascript/html/00_트랜지션색깔박스.html
@@ -127,9 +127,11 @@
         durationTime = 0;
 
         const boxList = document.querySelectorAll(".box");
+        const inputList = document.querySelectorAll(".colorInput");
 
         for (let i = 0; i < boxList.length; i++) {
           boxList[i].style.backgroundColor = "";
+          inputList[i].value = "";
         }
       });
     </script>
